--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -24,7 +24,6 @@ log = { version = "0.4", default-features = false }
 # we keep bitflags on version 1.x due to the various issues with cbindgen macro expansion and other issues 
 bitflags = "1.3"
 coarsetime = { version = "0.1", optional = true }
-smallvec = { version = "1.13", default-features = false }
 x86_64 = { version = "0.14", default-features = false }
 rand = { version = "0.8", optional = true }
 rand_xorshift = { version = "0.3", optional = true }
@@ -52,7 +51,6 @@ toml = { version = "0.8", optional = true }
 
 # plugin analyzer
 num-traits = { version = "0.2", optional = true }
-constcat = { version = "0.5", optional = true }
 
 [dev-dependencies]
 rand = { version = "0.8" }
@@ -69,7 +67,7 @@ dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
 serde_derive = ["serde", "cglue/serde"]
 memmapfiles = ["toml", "serde_derive"]
-plugins = ["libloading", "dirs", "goblin", "os_helpers", "abi_stable", "cglue/layout_checks", "log/std", "once_cell", "num-traits", "constcat"]
+plugins = ["libloading", "dirs", "goblin", "os_helpers", "abi_stable", "cglue/layout_checks", "log/std", "once_cell", "num-traits"]
 filemap = ["memmap"]
 64_bit_mem = []
 os_helpers = ["goblin", "pelite"]
