--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
         flags: [--all-features, --no-default-features]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Install rust 1.74.0
         uses: actions-rs/toolchain@v1
         with:
@@ -34,7 +34,7 @@ jobs:
       matrix:
         target: [aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabihf, i686-unknown-linux-gnu]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Install rust 1.74.0
         uses: actions-rs/toolchain@v1
         with:
@@ -53,7 +53,8 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        lfs: true
       - name: Install rust 1.74.0
         uses: actions-rs/toolchain@v1
         with:
@@ -78,7 +79,8 @@ jobs:
       matrix:
         target: [aarch64-unknown-linux-gnu, i686-unknown-linux-gnu]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        lfs: true
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly # currently required due to -Zdoctest-xcompile
@@ -100,7 +102,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: 1.74.0
@@ -116,7 +118,7 @@ jobs:
   build-ffi:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly # required by cglue codegen
@@ -139,7 +141,7 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Rust nightly
         uses: actions-rs/toolchain@v1
         with:
@@ -154,7 +156,7 @@ jobs:
   build-coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           path: 'memflow-repo'
       - name: Set up Rust nightly
