--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -9,8 +9,8 @@ readme = "../README.md"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
 license = "MIT"
-keywords = ["memflow", "introspection", "memory", "dma"]
-categories = ["memory-management", "os"]
+keywords = [ "memflow", "introspection", "memory", "dma" ]
+categories = [ "memory-management", "os" ]
 rust-version = "1.74.0"
 
 [badges]
@@ -35,7 +35,6 @@ hashbrown = "0.14"
 fixed-slice-vec = "0.10"
 cglue = { version = "=0.2.14", default-features = false }
 rangemap = "1.5"
-offsetter = "0.1.0"
 
 # no-std
 smallvec = { version = "1.13", default-features = false }
@@ -44,25 +43,13 @@ smallvec = { version = "1.13", default-features = false }
 libloading = { version = "0.8", optional = true }
 dirs = { version = "5.0", optional = true }
 # enable unsafe_alignment for now, this is UB, but the idea is to fix pelite in upstream
-pelite = { version = "=0.9.0", optional = true, default-features = false, features = [
-    "unsafe_alignment",
-] }
+pelite = { version = "=0.9.0", optional = true, default-features = false, features = ["unsafe_alignment"] }
 # we pin abi_stable to prevent abi incompatabilities by different versions
 abi_stable = { version = "=0.10.3", optional = true }
 once_cell = { version = "1.19", optional = true }
 
-goblin = { version = "0.8.1", optional = true, features = [
-    "pe32",
-    "pe64",
-    "elf32",
-    "elf64",
-    "mach32",
-    "mach64",
-] }
-serde = { version = "1.0", optional = true, default-features = false, features = [
-    "derive",
-    "alloc",
-] }
+goblin = { version = "0.8.1", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
+serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "0.8", optional = true }
 
 # plugin analyzer
@@ -79,36 +66,16 @@ clap = { version = "4.5", features = ["cargo"] }
 simplelog = "0.12"
 rayon = "1.5"
 colored = "2.0"
-
+offsetter = "0.1.0"
 
 [features]
-default = [
-    "std",
-    "serde_derive",
-    "plugins",
-    "os_helpers",
-    "filemap",
-    "memmapfiles",
-    "64_bit_mem",
-]
+default = ["std", "serde_derive", "plugins", "os_helpers", "filemap", "memmapfiles", "64_bit_mem"]
 trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
 serde_derive = ["serde", "cglue/serde"]
 memmapfiles = ["toml", "serde_derive"]
-plugins = [
-    "libloading",
-    "dirs",
-    "goblin",
-    "os_helpers",
-    "abi_stable",
-    "cglue/layout_checks",
-    "log/std",
-    "once_cell",
-    "num-traits",
-    "serde_json",
-    "chrono",
-]
+plugins = ["libloading", "dirs", "goblin", "os_helpers", "abi_stable", "cglue/layout_checks", "log/std", "once_cell", "num-traits", "serde_json", "chrono"]
 filemap = ["memmap"]
 64_bit_mem = []
 os_helpers = ["goblin", "pelite"]
