--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -66,6 +66,7 @@ clap = { version = "4.5", features = ["cargo"] }
 simplelog = "0.12"
 rayon = "1.5"
 colored = "2.0"
+offsetter = "0.1.0"
 
 [features]
 default = ["std", "serde_derive", "plugins", "os_helpers", "filemap", "memmapfiles", "64_bit_mem"]
