--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -15,10 +14,10 @@ jobs:
         flags: [--all-features, --no-default-features]
     steps:
       - uses: actions/checkout@v4
-      - name: Install rust 1.74.0
+      - name: Install rust 1.82.0
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.74.0
+          toolchain: 1.82.0
           override: true
 
       - name: Build
@@ -32,13 +31,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabihf, i686-unknown-linux-gnu]
+        target:
+          [
+            aarch64-unknown-linux-gnu,
+            armv7-unknown-linux-gnueabihf,
+            i686-unknown-linux-gnu,
+          ]
     steps:
       - uses: actions/checkout@v4
-      - name: Install rust 1.74.0
+      - name: Install rust 1.82.0
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.74.0
+          toolchain: 1.82.0
           target: ${{ matrix.target }}
           override: true
       - uses: actions-rs/cargo@v1
@@ -46,7 +50,7 @@ jobs:
           use-cross: true
           command: build
           args: --target ${{ matrix.target }} --workspace --all-features --verbose
-            
+
   test:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -54,10 +58,10 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
-      - name: Install rust 1.74.0
+      - name: Install rust 1.82.0
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.74.0
+          toolchain: 1.82.0
           override: true
 
       - name: Pre-build binaries (for inventory integration tests)
@@ -103,7 +107,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.74.0
+          toolchain: 1.82.0
           override: true
           components: rustfmt, clippy
       - name: Check formatting
@@ -140,10 +144,10 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
-      - name: Install rust 1.74.0
+      - name: Install rust 1.82.0
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: 1.74.0
+          toolchain: 1.82.0
           override: true
 
       - name: Build
@@ -151,7 +155,7 @@ jobs:
 
       - name: Run
         run: cd nostd-test; cargo run ${{ matrix.flags }} --verbose
-  
+
   build-coverage:
     runs-on: ubuntu-latest
     env:
